--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
                 font-size: 0.8em;
             }
         }
+        .play-button {
+            margin-top: 20px;
+            background-color: #ff69b4;
+            border: none;
+            color: #fff;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -96,10 +106,16 @@
             <i class="fas fa-birthday-cake"></i>
             <i class="fas fa-2">2</i><i class="fas fa-3">3</i>
         </div>
-        <br><h1>Happy Birthday, Romi!</h1>
+        <h1>Happy Birthday, Romi!</h1>
         <div class="typewriter" id="typewriter-container"></div>
+        <button class="play-button" onclick="playMusic()">Play Music</button>
     </div>
     <div class="floating-hearts" id="floating-hearts"></div>
+
+    <audio id="background-music" loop>
+        <source src="pee_loon.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <script>
         const lines = [
@@ -143,19 +159,28 @@
             return line;
         }
 
-        window.onload = typeWriter;
-
-        // Create floating hearts
-        const floatingHearts = document.getElementById('floating-hearts');
-        for (let i = 0; i < 20; i++) {
-            const heart = document.createElement('div');
-            heart.classList.add('floating-heart');
-            heart.style.left = Math.random() * 100 + 'vw';
-            heart.style.animationDuration = Math.random() * 3 + 5 + 's';
-            heart.style.animationDelay = Math.random() * 5 + 's';
-            heart.innerHTML = '<i class="fas fa-heart"></i>';
-            floatingHearts.appendChild(heart);
+        function playMusic() {
+            const music = document.getElementById('background-music');
+            music.play().catch(error => console.log('Error playing music:', error));
         }
+
+        function createFloatingHearts() {
+            const floatingHearts = document.getElementById('floating-hearts');
+            for (let i = 0; i < 20; i++) {
+                const heart = document.createElement('div');
+                heart.classList.add('floating-heart');
+                heart.style.left = Math.random() * 100 + 'vw';
+                heart.style.animationDuration = Math.random() * 3 + 5 + 's';
+                heart.style.animationDelay = Math.random() * 5 + 's';
+                heart.innerHTML = '<i class="fas fa-heart"></i>';
+                floatingHearts.appendChild(heart);
+            }
+        }
+
+        window.onload = () => {
+            typeWriter();
+            createFloatingHearts();
+        };
     </script>
     <!-- Bootstrap JS (optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -163,6 +188,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </body>
 </html>
+
 
 
 
