--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <i class="fas fa-birthday-cake"></i>
             <i class="fas fa-2">2</i><i class="fas fa-3">3</i>
         </div>
-        <h1>Happy Birthday, Romi!</h1>
+        <br><h1>Happy Birthday, Romi!</h1>
         <div class="typewriter" id="typewriter-container"></div>
         <button class="play-button" onclick="playMusic()">Play Music</button>
     </div>
